bug: height problem for lightbox on mobile

--- a/src/scss/Services.scss
+++ b/src/scss/Services.scss
@@ -92,7 +92,7 @@
             flex-direction: column;
             @media(max-width: 500px){
                 width: 85%;
-                height: 85%;
+                height: 80%;
             }
 
             .lightboxNavbar{
